--- a/mcad/.gitattributes
+++ b/mcad/.gitattributes
@@ -1,3 +1,4 @@
 *.iam filter=lfs diff=lfs merge=lfs -text
 *.ipj filter=lfs diff=lfs merge=lfs -text
 *.ipt filter=lfs diff=lfs merge=lfs -text
+*.stl filter=lfs diff=lfs merge=lfs -text
