--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "firmware/deps/cmake-avr"]
 	path = firmware/deps/cmake-avr
-	url = https://github.com/mkleemann/cmake-avr.git
+	url = https://github.com/atuleu/cmake-avr.git
