Adds a debug module
It writes to EEPROM some logs for debugging purposes.

--- a/firmware/helios/module/src/CMakeLists.txt
+++ b/firmware/helios/module/src/CMakeLists.txt
@@ -1,5 +1,7 @@
-set(SRC_FILES main.c)
+set(SRC_FILES main.c
+              Debug.c)
 
-set(HDR_FILES)
+set(HDR_FILES Debug.h
+              )
 
 add_avr_executable(helios-module ${SRC_FILES} ${HDR_FILES})
