Impements Visible and UV light management

--- a/firmware/helios/module/src/CMakeLists.txt
+++ b/firmware/helios/module/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(SRC_FILES main.c
-              Debug.c)
+              Debug.c
+              LightManager.c)
 
 set(HDR_FILES Debug.h
-              )
+              LightManager.h)
 
 add_avr_executable(helios-module ${SRC_FILES} ${HDR_FILES})
