Implements basic charge monitor
TODO: needs to compute the actual value for the hysteresis

--- a/firmware/helios/module/src/CMakeLists.txt
+++ b/firmware/helios/module/src/CMakeLists.txt
@@ -1,8 +1,13 @@
 set(SRC_FILES main.c
               Debug.c
-              LightManager.c)
+              LightManager.c
+              ChargeMonitor.c
+              SerialInterface.c)
 
 set(HDR_FILES Debug.h
-              LightManager.h)
+              LightManager.h
+              ChargeMonitor.h
+              SerialInterface.h)
+
 
 add_avr_executable(helios-module ${SRC_FILES} ${HDR_FILES})
