Makes the light manager system clock works

--- a/firmware/helios/module/src/CMakeLists.txt
+++ b/firmware/helios/module/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(SRC_FILES main.c
-              Debug.c
-              LightManager.c
-              ChargeMonitor.c
-              SerialInterface.c)
+              LightManager.c)
+              # Debug.c
+              # ChargeMonitor.c
+              # SerialInterface.c)
 
 set(HDR_FILES Debug.h
               LightManager.h
