Debugs the debug module

--- a/firmware/helios/module/src/CMakeLists.txt
+++ b/firmware/helios/module/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SRC_FILES main.c
-              LightManager.c)
-              # Debug.c
+              LightManager.c
+              Debug.c)
               # ChargeMonitor.c
               # SerialInterface.c)
 
