Makes a clock using systime events

--- a/firmware/helios/master/src/CMakeLists.txt
+++ b/firmware/helios/master/src/CMakeLists.txt
@@ -1,5 +1,6 @@
-set(SRC_FILES main.c)
+set(SRC_FILES main.c
+	          Systime.c)
 
-set(HDR_FILES )
+set(HDR_FILES Systime.h)
 
 add_avr_executable(helios-master ${SRC_FILES} ${HDR_FILES})
