Adds a module manager to send command to Modules
Here we have a sample program that ramp up and ramp down light module
every 10ms

--- a/firmware/helios/master/src/CMakeLists.txt
+++ b/firmware/helios/master/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(SRC_FILES main.c
-	          Systime.c)
+	          Systime.c
+	          ModuleManager.c)
 
-set(HDR_FILES Systime.h)
+set(HDR_FILES Systime.h
+	          ModuleManager.h)
 
 add_avr_executable(helios-master ${SRC_FILES} ${HDR_FILES})
