--- a/firmware/helios/module/CMakeLists.txt
+++ b/firmware/helios/module/CMakeLists.txt
@@ -5,18 +5,23 @@ set(AVR_PROGRAMMER arduinoisp)
 set(AVR_UPLOADTOOL_PORT usb)
 set(AVR_UPLOADTOOL_OPTIONS -C ${CMAKE_CURRENT_SOURCE_DIR}/../../avrdude.conf)
 
-set(AVR_MCU attiny24)
+set(AVR_MCU atmega328pb)
 set(AVR_L_FUSE 0xff)
-set(AVR_H_FUSE 0xdc)
-set(AVR_E_FUSE 0xff)
-set(MCU_SPEED "10000000L")
+set(AVR_H_FUSE 0xd9)
+set(AVR_E_FUSE 0xf4)
+set(MCU_SPEED "20000000L")
 
 
 project(helio-module C CXX)
 cmake_minimum_required(VERSION 3.2)
 
 
-add_definitions("-DF_CPU= ${MCU_SPEED}")
+add_definitions("-DF_CPU=${MCU_SPEED}" )
+set(ATMEL_DEFINITION_PACK  CACHE STRING "Adds an Atmel Definion pack for new devices")
+if(ATMEL_DEFINITION_PACK)
+	set(CMAKE_C_FLAGS "-B ${ATMEL_DEFINITION_PACK}/gcc/dev/atmega328pb/")
+	include_directories(${ATMEL_DEFINITION_PACK}/include)
+endif(ATMEL_DEFINITION_PACK)
 add_compile_options("-fpack-struct")
 add_compile_options("-fshort-enums")
 add_compile_options("-Wall")
