[wip-m328pb] Turns it into a simple Clock
Use the timer 4 of the m328pb to have a stupid clock

--- a/firmware/helios/module/src/CMakeLists.txt
+++ b/firmware/helios/module/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(SRC_FILES main.c
-              LightManager.c
-              Debug.c
-              ChargeMonitor.c)
+	          Systime.c)
+              #LightManager.c
+              #Debug.c
+              #ChargeMonitor.c)
               # SerialInterface.c)
 
 set(HDR_FILES Debug.h
+              Systime.h
               LightManager.h
               ChargeMonitor.h
               SerialInterface.h)
