Implements Serial Interface in Helios module

--- a/firmware/helios/module/src/CMakeLists.txt
+++ b/firmware/helios/module/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(SRC_FILES main.c
 	          Systime.c
               LightManager.c
-              ChargeMonitor.c)
-              # SerialInterface.c)
+              ChargeMonitor.c
+              SerialInterface.c)
 
 set(HDR_FILES Systime.h
               LightManager.h
