Implements Host tx of packet

--- a/firmware/arke/src/CMakeLists.txt
+++ b/firmware/arke/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(SRC_FILES main.c
 	          LEDs.c
-	          Systime.c)
+	          Systime.c
+	          HostLink.c)
 
 set(HDR_FILES LEDs.h
-	          Systime.h)
+	          Systime.h
+	          HostLink.h)
 
 
 add_avr_executable(arke ${SRC_FILES} ${HDR_FILES})
