Implements a simple host communication

--- a/firmware/arke/CMakeLists.txt
+++ b/firmware/arke/CMakeLists.txt
@@ -12,7 +12,9 @@ set(AVR_H_FUSE 0xd9)
 set(AVR_E_FUSE 0x01)
 set(MCU_SPEED "16000000L")
 
-project(arke C CXX)
+cmake_policy(SET CMP0048 NEW)
+project(arke LANGUAGES C CXX
+             VERSION 0.1)
 cmake_minimum_required(VERSION 3.2)
 
 add_definitions("-DF_CPU= ${MCU_SPEED}")
@@ -32,7 +34,13 @@ set(YAACL_ROOT ${PROJECT_SOURCE_DIR}/../lib/yaacl)
 set(YAACL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../lib/yaacl/src)
 set(YAACL_SRC_FILES ${PROJECT_SOURCE_DIR}/../lib/yaacl/src/yaacl-src-all.c)
 
-include_directories(${AVR_GCC_INCLUDE} ${PROJECT_SOURCE_DIR}/../ ${YAACL_INCLUDE_DIR})
+include_directories(${AVR_GCC_INCLUDE}
+	                ${PROJECT_SOURCE_DIR}/../
+	                ${YAACL_INCLUDE_DIR}
+	                ${PROJECT_SOURCE_DIR}/include)
+
+add_definitions("-DARKE_FW_MAJOR=${PROJECT_VERSION_MAJOR}"
+	"-DARKE_FW_MINOR=${PROJECT_VERSION_MINOR}")
 
 add_avr_library(yaacl ${YAACL_SRC_FILES})
 
