Implements Arke protocol in helios/master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "firmware/deps/cmake-avr"]
 	path = firmware/deps/cmake-avr
 	url = https://github.com/atuleu/cmake-avr.git
+[submodule "firmware/deps/fort-libarke"]
+	path = firmware/deps/fort-libarke
+	url = git@c4science.ch:source/fort-libarke.git
