--- a/firmware/helios/master/src/CMakeLists.txt
+++ b/firmware/helios/master/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(SRC_FILES main.c
-	          Systime.c
 	          ModuleManager.c)
 
-set(HDR_FILES Systime.h
-	          ModuleManager.h)
+set(HDR_FILES ModuleManager.h)
 
 add_avr_executable(helios-master ${SRC_FILES} ${HDR_FILES})
+
+avr_target_link_libraries(helios-master libarke yaacl)
