--- a/firmware/celaeno/src/CMakeLists.txt
+++ b/firmware/celaeno/src/CMakeLists.txt
@@ -1,7 +1,10 @@
-set(SRC_FILES main.c)
+set(SRC_FILES main.c
+	          Systime.c
+	          LEDs.c)
 
-set(HDR_FILES )
+set(HDR_FILES Systime.h
+	          LEDs.h)
 
 add_avr_executable(celaeno ${SRC_FILES} ${HDR_FILES})
 
-avr_target_link_libraries(celaeno yaacl libarke)
+avr_target_link_libraries(celaeno yaacl)
