--- a/firmware/celaeno/src/CMakeLists.txt
+++ b/firmware/celaeno/src/CMakeLists.txt
@@ -7,4 +7,4 @@ set(HDR_FILES Systime.h
 
 add_avr_executable(celaeno ${SRC_FILES} ${HDR_FILES})
 
-avr_target_link_libraries(celaeno yaacl)
+avr_target_link_libraries(celaeno libarke yaail)
