Adds Fan Control to celaeno.

--- a/firmware/celaeno/src/CMakeLists.txt
+++ b/firmware/celaeno/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(SRC_FILES main.c
 	          Systime.c
-	          LEDs.c)
+	          LEDs.c
+	          FanControl.c)
 
 set(HDR_FILES Systime.h
-	          LEDs.h)
+	          LEDs.h
+	          FanControl.h)
 
 add_avr_executable(celaeno ${SRC_FILES} ${HDR_FILES})
 
