[Zeus] Adds a sensor loop

--- a/firmware/zeus/src/CMakeLists.txt
+++ b/firmware/zeus/src/CMakeLists.txt
@@ -1,7 +1,11 @@
 set(SRC_FILES main.c
-	          LEDs.c)
+	          LEDs.c
+	          Heaters.c
+	          Sensors.c)
 
-set(HDR_FILES LEDs.h)
+set(HDR_FILES LEDs.h
+	          Heaters.h
+	          Sensors.h)
 
 
 add_avr_executable(zeus ${SRC_FILES} ${HDR_FILES} )
