Uses a common LED source files

--- a/firmware/celaeno/src/CMakeLists.txt
+++ b/firmware/celaeno/src/CMakeLists.txt
@@ -2,7 +2,8 @@ set(SRC_FILES main.c
 	          LEDs.c
 	          FanControl.c)
 
-set(HDR_FILES LEDs.h
+set(HDR_FILES config.h
+	          LEDs.h
 	          FanControl.h)
 
 add_avr_executable(celaeno ${SRC_FILES} ${HDR_FILES})
