Fixes small arke issues.

--- a/firmware/arke/CMakeLists.txt
+++ b/firmware/arke/CMakeLists.txt
@@ -2,14 +2,15 @@ set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../deps/cmake-avr/generic-g
 
 
 set(AVR_UPLOADTOOL avrdude)
-set(AVR_PROGRAMMER arduinoisp)
+set(AVR_PROGRAMMER avrispmkii)
+#set(AVR_PROGRAMMER arduinoisp)
 set(AVR_UPLOADTOOL_PORT usb)
 set(AVR_UPLOADTOOL_OPTIONS -C ${CMAKE_CURRENT_SOURCE_DIR}/../avrdude.conf)
 
 set(AVR_MCU atmega16m1)
 set(AVR_L_FUSE 0xff)
 set(AVR_H_FUSE 0xd9)
-set(AVR_E_FUSE 0x36)
+set(AVR_E_FUSE 0xf6)
 set(MCU_SPEED "16000000L")
 
 cmake_policy(SET CMP0048 NEW)
