[zeus] Refactor PIDController

--- a/firmware/zeus/src/CMakeLists.txt
+++ b/firmware/zeus/src/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SRC_FILES main.c
 	          LEDs.c
 	          FanControl.c
 	          Heaters.c
+	          PIDController.c
 	          ClimateController.c
 	          Sensors.c)
 
@@ -9,6 +10,7 @@ set(HDR_FILES LEDs.h
 	          config.h
 	          FanControl.c
 	          Heaters.h
+	          PIDController.h
 	          ClimateController.h
 	          Sensors.h)
 
