Updates remote for libarke gitsubmodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/atuleu/cmake-avr.git
 [submodule "firmware/deps/fort-libarke"]
 	path = firmware/deps/fort-libarke
-	url = git@c4science.ch:source/fort-libarke.git
+	url = https://github.com/formicidae-tracker/libarke.git
