--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "firmware/deps/fort-libarke"]
 	path = firmware/deps/fort-libarke
 	url = https://github.com/formicidae-tracker/libarke.git
+[submodule "ecad/lib/KiCad-Spice-Library"]
+	path = ecad/lib/KiCad-Spice-Library
+	url = https://github.com/kicad-spice-library/KiCad-Spice-Library.git
