--- a/firmware/notus/CMakeLists.txt
+++ b/firmware/notus/CMakeLists.txt
@@ -1,19 +1,16 @@
 cmake_minimum_required(VERSION 3.17)
 
-set(PICO_SDK_FETCH_FROM_GIT On)
-set(PICO_SDK_WANTED_VERSION 1.5.1)
-
 set(FAMILY rp2040)
 set(BOARD pico_sdk)
 
-include(pico_sdk_import.cmake)
+set(DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps)
+
+include(${DEPS_DIR}/pico-sdk/pico_sdk_init.cmake)
 
 project(notus)
 
 include(ExternalProject)
-
-list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
-include(OpenOCD)
+include(${DEPS_DIR}/cmake/OpenOCD.cmake)
 
 set(PICO_CXX_ENABLE_EXCEPTIONS 1)
 
@@ -25,11 +22,12 @@ set(CMAKE_C_STANDARD_REQUIRED 1)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED 1)
 
-add_executable(notus main.cpp)
-target_compile_definitions(notus PUBLIC BOARD=pico)
+include(FetchContent)
+FetchContent_Declare(
+  can2040
+  GIT_REPOSITORY https://github.com/formicidae-tracker/can2040.git
+  GIT_TAG origin/dev/cmake)
 
-target_link_libraries(notus pico_stdlib)
+FetchContent_MakeAvailable(can2040)
 
-pico_add_extra_outputs(notus)
-
-add_openocd_upload_target(TARGET notus)
+add_subdirectory(src)
