Refactors utils in their own util library

--- a/firmware/notus/CMakeLists.txt
+++ b/firmware/notus/CMakeLists.txt
@@ -4,13 +4,14 @@ set(FAMILY rp2040)
 set(BOARD pico_sdk)
 
 set(DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps)
+set(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
+
 set(PICOTOOL_FETCH_FROM_GIT_PATH ${DEPS_DIR}/picotool)
 
 include(${DEPS_DIR}/pico-sdk/pico_sdk_init.cmake)
 
 project(notus)
 
-include(ExternalProject)
 include(${DEPS_DIR}/cmake/OpenOCD.cmake)
 
 set(PICO_CXX_ENABLE_EXCEPTIONS 1)
@@ -22,6 +23,9 @@ set(CMAKE_C_STANDARD_REQUIRED 1)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED 1)
+
+add_subdirectory(${LIB_DIR}/rp2040-utils
+                 ${CMAKE_CURRENT_BINARY_DIR}/lib/rp2040-utils)
 
 include(FetchContent)
 FetchContent_Declare(
