Organize a Arke library

--- a/firmware/notus/CMakeLists.txt
+++ b/firmware/notus/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.17)
 set(FAMILY rp2040)
 set(BOARD pico_sdk)
 
-set(DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps)
-set(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
+set(DEPS_DIR ${CMAKE_CURRENT_LIST_DIR}/../deps)
+set(LIB_DIR ${CMAKE_CURRENT_LIST_DIR}/../lib)
 
 set(PICOTOOL_FETCH_FROM_GIT_PATH ${DEPS_DIR}/picotool)
 
@@ -24,15 +24,10 @@ set(CMAKE_C_STANDARD_REQUIRED 1)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED 1)
 
-add_subdirectory(${LIB_DIR}/rp2040-utils
-                 ${CMAKE_CURRENT_BINARY_DIR}/lib/rp2040-utils)
-
 include(FetchContent)
-FetchContent_Declare(
-  can2040
-  GIT_REPOSITORY https://github.com/formicidae-tracker/can2040.git
-  GIT_TAG origin/dev/cmake)
+FetchContent_Declare(rp2040-utils URL ${LIB_DIR}/rp2040-utils)
+FetchContent_Declare(rp2040-arke URL ${LIB_DIR}/rp2040-arke)
 
-FetchContent_MakeAvailable(can2040)
+FetchContent_MakeAvailable(rp2040-utils rp2040-arke)
 
 add_subdirectory(src)
