--- a/firmware/notus/CMakeLists.txt
+++ b/firmware/notus/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.13..3.23)
 
 set(FAMILY rp2040)
 set(BOARD pico_sdk)
@@ -27,12 +27,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED 1)
 include(FetchContent)
 FetchContent_Declare(rp2040-utils URL ${LIB_DIR}/rp2040-utils)
 FetchContent_Declare(rp2040-arke URL ${LIB_DIR}/rp2040-arke)
-FetchContent_Declare(
-	fort-arke
-	GIT_REPOSITORY https://github.com/formicidae-tracker/libarke
-	GIT_TAG origin/dev/rp2040
-)
 
-FetchContent_MakeAvailable(rp2040-utils rp2040-arke fort-arke)
+FetchContent_MakeAvailable(rp2040-utils rp2040-arke)
 
 add_subdirectory(src)
