Adds a blink led program.

--- a/firmware/celaeno/src/CMakeLists.txt
+++ b/firmware/celaeno/src/CMakeLists.txt
@@ -1,11 +1,13 @@
-set(SRC_FILES main.c
-	          LEDs.c
-	          FanControl.c)
+set(SRC_FILES main.c LEDs.c FanControl.c)
 
-set(HDR_FILES config.h
-	          LEDs.h
-	          FanControl.h)
+set(HDR_FILES config.h LEDs.h FanControl.h)
 
 add_avr_executable(celaeno ${SRC_FILES} ${HDR_FILES})
 
 avr_target_link_libraries(celaeno libarke yaail)
+
+remove_definitions("-DF_CPU=${MCU_SPEED}")
+
+add_avr_executable(blink main-blink.c)
+
+avr_target_compile_definitions(blink PRIVATE "-DF_CPU=8000000")
