--- a/firmware/notus/CMakeLists.txt
+++ b/firmware/notus/CMakeLists.txt
@@ -6,15 +6,11 @@ set(BOARD pico_sdk)
 set(DEPS_DIR ${CMAKE_CURRENT_LIST_DIR}/../deps)
 set(LIB_DIR ${CMAKE_CURRENT_LIST_DIR}/../lib)
 
-set(PICOTOOL_FETCH_FROM_GIT_PATH ${DEPS_DIR}/picotool)
-
 include(${DEPS_DIR}/pico-sdk/pico_sdk_init.cmake)
 
 project(notus)
 
 include(${DEPS_DIR}/cmake/OpenOCD.cmake)
-
-set(PICO_CXX_ENABLE_EXCEPTIONS 1)
 
 pico_sdk_init()
 
@@ -26,6 +22,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED 1)
 
 include(FetchContent)
 FetchContent_Declare(rp2040-utils SOURCE_DIR ${LIB_DIR}/rp2040-utils)
-FetchContent_Declare(rp2040-arke SOURCE_DIR ${LIB_DIR}/rp2040-arke)
-FetchContent_MakeAvailable(rp2040-utils rp2040-arke)
+# FetchContent_Declare(rp2040-arke SOURCE_DIR ${LIB_DIR}/rp2040-arke)
+FetchContent_Declare(
+	can2040
+	GIT_REPOSITORY https://github.com/formicidae-tracker/can2040
+	GIT_TAG dev/cmake
+	SOURCE_SUBDIR cmake
+)
+FetchContent_MakeAvailable(rp2040-utils can2040)
 add_subdirectory(src)
