--- a/firmware/lib/rp2040-arke/src/CMakeLists.txt
+++ b/firmware/lib/rp2040-arke/src/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(rp2040-arke INTERFACE ${SRC_FILES})
 
 target_link_libraries(
 	rp2040-arke INTERFACE rp2040-utils arke pico_stdlib can2040::can2040
+						  hardware_watchdog
 )
 target_include_directories(
 	rp2040-arke INTERFACE ${CMAKE_CURRENT_LIST_DIR} S{CMAKE_CURRENT_BINARY_DIR}
