--- a/firmware/notus/src/CMakeLists.txt
+++ b/firmware/notus/src/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(notus main.cpp)
 
 target_compile_definitions(notus PUBLIC BOARD=pico)
 
-target_link_libraries(notus pico_stdlib rp2040-utils rp2040-arke)
+target_link_libraries(notus pico_stdlib rp2040-utils rp2040-arke hardware_pwm)
 
 pico_add_extra_outputs(notus)
 
