--- a/firmware/lib/rp2040-utils/src/utils/CMakeLists.txt
+++ b/firmware/lib/rp2040-utils/src/utils/CMakeLists.txt
@@ -14,6 +14,6 @@ add_library(rp2040-utils INTERFACE)
 target_sources(rp2040-utils INTERFACE ${SRC_FILES})
 
 target_link_libraries(
-	rp2040-utils INTERFACE pico_stdlib pico_multicore hardware_flash pico_flash
+	rp2040-utils INTERFACE pico_stdlib pico_multicore hardware_flash
 )
 target_include_directories(rp2040-utils INTERFACE ${CMAKE_CURRENT_LIST_DIR}/../)
