--- a/firmware/nyx/src/CMakeLists.txt
+++ b/firmware/nyx/src/CMakeLists.txt
@@ -1,3 +1,8 @@
-set(SRC_FILES main.c system_clock.c system_clock.h)
+set(SRC_FILES
+	main.cpp #
+	system_clock.cpp #
+	system_clock.hpp #
+	defer.hpp
+)
 
 add_avr_executable(nyx ${SRC_FILES})
