--- a/firmware/nyx/src/CMakeLists.txt
+++ b/firmware/nyx/src/CMakeLists.txt
@@ -6,3 +6,18 @@ set(SRC_FILES
 )
 
 add_avr_executable(nyx ${SRC_FILES})
+
+set(PYMCUPROG_OPTIONS -d attiny202 -t uart -u /dev/ttyUSB0)
+
+add_custom_target(nyx-ping ${PYMCUPROG_EXECUTABLE} ${PYMCUPROG_OPTIONS} ping)
+add_custom_target(
+	nyx-upload
+	${PYMCUPROG_EXECUTABLE}
+	${PYMCUPROG_OPTIONS}
+	write
+	-f
+	nyx-attiny202.hex
+	--erase
+	--verify
+	DEPENDS nyx-attiny202.hex
+)
