[HELIOS] Adds a LED controller

--- a/firmware/helios/master/CMakeLists.txt
+++ b/firmware/helios/master/CMakeLists.txt
@@ -1,60 +1,29 @@
-set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../../deps/cmake-avr/generic-gcc-avr.cmake)
+cmake_minimum_required(VERSION 3.13..3.23)
+
+set(FAMILY rp2040)
+set(BOARD pico_sdk)
 
 
-set(AVR_UPLOADTOOL avrdude)
-set(AVR_PROGRAMMER avrispmkii)
-set(AVR_UPLOADTOOL_PORT usb)
-set(AVR_UPLOADTOOL_OPTIONS -C ${CMAKE_CURRENT_SOURCE_DIR}/../../avrdude.conf)
+set(DEPS_DIR ${CMAKE_CURRENT_LIST_DIR}/../../deps)
+set(LIB_DIR ${CMAKE_CURRENT_LIST_DIR}/../../lib)
 
-set(AVR_MCU atmega16m1)
-set(AVR_L_FUSE 0xff)
-set(AVR_H_FUSE 0xd9)
-set(AVR_E_FUSE 0xc1)
-set(MCU_SPEED "16000000L")
+include(${DEPS_DIR}/pico-sdk/pico_sdk_init.cmake)
 
+project(helios
+	LANGUAGES C CXX
+	VERSION 0.2)
 
-cmake_policy(SET CMP0048 NEW)
-project(helios-master LANGUAGES C CXX
-	                  VERSION 0.1)
-cmake_minimum_required(VERSION 3.2)
+include(${DEPS_DIR}/cmake/OpenOCD.cmake)
 
-add_definitions("-DF_CPU= ${MCU_SPEED}")
-add_compile_options("-fpack-struct")
-add_compile_options("-fshort-enums")
-add_compile_options("-Wall")
-add_compile_options("-Werror")
-add_compile_options("-pedantic")
-add_compile_options("-pedantic-errors")
-add_compile_options("-funsigned-char")
-add_compile_options("-funsigned-bitfields")
-add_compile_options("-ffunction-sections")
+pico_sdk_init()
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED 1)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED 1)
 
-set(YAACL_ROOT ${PROJECT_SOURCE_DIR}/../../lib/yaacl)
-set(YAACL_INCLUDE_DIR ${YAACL_ROOT}/src)
-set(YAACL_SRC_FILES ${YAACL_ROOT}/src/yaacl-src-all.c)
-set(LIBARKE_ROOT ${PROJECT_SOURCE_DIR}/../../deps/fort-libarke)
-set(LIBARKE_INCLUDE_DIR ${LIBARKE_ROOT}/include)
-set(LIBARKE_SRC_FILES ${LIBARKE_ROOT}/src-avr/arke-src-all.c)
-
-
-add_definitions("-DARKE_MY_FW_MAJOR_VERSION=${PROJECT_VERSION_MAJOR}"
-	            "-DARKE_MY_FW_MINOR_VERSION=${PROJECT_VERSION_MINOR}"
-	            "-DARKE_MY_CLASS=0x34"
-	            "-DARKE_MY_SUBID=0x01"
-	            "-DARKE_MY_SIZE=4"
-	            )
-
-add_avr_library(yaacl ${YAACL_SRC_FILES})
-
-add_avr_library(libarke ${LIBARKE_SRC_FILES})
-
-avr_target_link_libraries(libarke yaacl)
-
-include_directories(${AVR_GCC_INCLUDE}
-                    ${PROJECT_SOURCE_DIR}/../
-                    ${YAACL_INCLUDE_DIR}
-                    ${LIBARKE_INCLUDE_DIR})
-
+include (FetchContent)
+FetchContent_Declare(rp2040-arke SOURCE_DIR ${LIB_DIR}/rp2040-arke)
+FetchContent_Declare(rp2040-utils SOURCE_DIR ${LIB_DIR}/rp2040-utils)
+FetchContent_MakeAvailable(rp2040-arke rp2040-utils)
 add_subdirectory(src)
