--- a/firmware/helios/master/src/CMakeLists.txt
+++ b/firmware/helios/master/src/CMakeLists.txt
@@ -7,9 +7,12 @@ set(HDR_FILES #
 	LED.hpp #
 )
 
+configure_file(config_helios.in config_helios.hpp)
+
 add_executable(helios ${SRC_FILES})
 
 target_compile_definitions(helios PUBLIC BOARD=pico_sdk)
+target_include_directories(helios PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
 target_link_libraries(helios pico_stdlib rp2040-utils rp2040-arke hardware_pwm)
 
