[Firmware/Helios] Enables the driver output on startup.

--- a/firmware/lib/rp2040-utils/src/utils/CMakeLists.txt
+++ b/firmware/lib/rp2040-utils/src/utils/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SRC_FILES
 	Log.cpp
 	FlashStorage.hpp
 	FlashStorage.cpp
+	Duration.cpp
+	Duration.hpp
 )
 
 add_library(rp2040-utils INTERFACE)
